# WordVoice-5A-Pipeline

./: .pdm-python  README.md  data.sh  download_models.sh  download_qwen3fa.py  pyproject.toml  requirements.txt
data_tools/: en_punc.py  get_dsp.py  get_mfa.py  get_qwen_mfa.py  get_qwen_only.py  zh_punc.py
test_demo/json_files/: en_test.jsonl  zh_test.jsonl
