[project]
name = "WordVocie-5A-Pipeline"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "",email = ""},
]
dependencies = [
    "cn2an==0.5.23",
    "huggingface-hub==0.36.2",
    "librosa==0.11.0",
    "matplotlib==3.11.0",
    "num2words==0.5.14",
    "numpy==2.5.0",
    "qwen-asr==0.0.6",
    "scipy==1.18.0",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "torchcrepe==0.0.24",
    "tqdm==4.67.1",
    "zhplot==1.0.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
