[project]
name = "WordVocie-5A-Pipeline"
version = "0.1.0"
description = "The annotation pipeline for WordVoice-5A."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "cn2an==0.5.23",
    "huggingface-hub==0.36.2",
    "librosa==0.11.0",
    "num2words==0.5.14",
    "torchcrepe==0.0.24",
    "tqdm==4.67.1",
    "zhplot==1.0.0",
    "kaldifst==1.7.17",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data_tools*"]
